fix: resolve horizontal scrolling issue on mobile devices

--- a/web/css/base/_reset.css
+++ b/web/css/base/_reset.css
@@ -8,6 +8,6 @@ body {
     line-height: 1.7;
     height: 100vh;
     display: flex;
-    overflow: hidden;
+    overflow-x: hidden;
     font-weight: 300;
 }
